# codegen

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.devcontainer/: devcontainer.json
codegen/: all.html  fn.fmt_bound_rhs.html  fn.fmt_bounds.html  fn.fmt_generics.html  index.html  sidebar-items.js  struct.AssociatedType.html  struct.Block.html  struct.Enum.html  struct.Field.html  struct.Formatter.html  struct.Function.html  struct.Impl.html  struct.Import.html  struct.Module.html  struct.Scope.html  struct.Struct.html  struct.Trait.html  struct.Type.html  struct.Variant.html
codegen/associated_type/: struct.AssociatedType.html
codegen/block/: struct.Block.html
codegen/enum/: struct.Enum.html
codegen/field/: struct.Field.html
codegen/formatter/: fn.fmt_bound_rhs.html  fn.fmt_bounds.html  fn.fmt_generics.html  struct.Formatter.html
codegen/function/: struct.Function.html
codegen/impl/: struct.Impl.html
codegen/import/: struct.Import.html
codegen/module/: struct.Module.html
codegen/scope/: struct.Scope.html
codegen/struct/: struct.Struct.html
codegen/trait/: struct.Trait.html
codegen/type/: struct.Type.html
codegen/variant/: struct.Variant.html
src/: associated_const.rs  associated_constant.rs  associated_type.rs  block.rs  body.rs  bound.rs  docs.rs  enum.rs  field.rs  fields.rs  formatter.rs  function.rs  impl.rs  import.rs  item.rs  keywords.rs  lib.rs  module.rs  scope.rs  struct.rs  trait.rs  type.rs  type_alias.rs  type_def.rs  variant.rs
tests/: codegen.rs
(+31 files in other folders)
